--- a/timelogs/timelog-dwaldron.org
+++ b/timelogs/timelog-dwaldron.org
@@ -4,7 +4,12 @@
 #+STARTUP: content indent logdrawer lognoteclock-out lognotedone
 
 * SPRING 2014 SOFTWARE STUDIO III HOURS
-** WEEK 1 (2/11/14 - 2/17/14) 
+** WEEK 1 (2/11/14 - 2/17/14)
+*** Ditching eVIl and learning emacs :dustin:
+Learning emacs commands and life without vim
+:LOGBOOK:
+:CLOCK: [2014-02-12 Wed 08:00] -- [2014-02-12 Wed 09:00] => 1:00
+:END:
 ** WEEK 2 (2/18/14 - 2/24/14)
 ** WEEK 3 (2/25/14 - 3/3/14)
 ** WEEK 4 (3/4/14 - 3/10/14)
