most recent timelog

--- a/timelogs/timelog-szemplinski.org
+++ b/timelogs/timelog-szemplinski.org
@@ -3,9 +3,23 @@
 #+DATE: Spring 2014
 #+STARTUP: content indent logdrawer lognoteclock-out lognotedone
 
-*** TODO Class time for the week of the 16th
+*** TODO Class time for the week of the 16th                     :rszempli:
+CLOCK: [2014-02-18 Tue 15:22]--[2014-02-18 Tue 15:49] =>  0:27
+- Some more class time
+CLOCK: [2014-02-18 Tue 14:57]--[2014-02-18 Tue 15:20] =>  0:23
+- More class time
 CLOCK: [2014-02-18 Tue 13:40]--[2014-02-18 Tue 14:32] =>  0:52
 - Class time
-*** TODO Django tutorials
-*** TODO Get more experience with org-mode
-*** TODO Tutorial on Angular.js
+*** TODO Django tutorials                                        :rszempli:
+**** TODO Go through the main site tutorial [2/5] [40%]
+- [X] Part 1
+- [X] Part 2
+- [ ] Part 3
+- [ ] Part 4
+- [ ] Part 5
+*** TODO Get more experience with org-mode                       :rszempli:
+**** TODO Look at more tutorials on it[0/3]
+- [ ] Learn more hotkeys
+- [ ] Memorize the hotkeys
+- [ ] Learn to like org-mode
+*** TODO Tutorial on Angular.js [[http://docs.angularjs.org/api][Documentation]]                    :rszempli:
