--- a/timelogs/timelog-dwaldron.org
+++ b/timelogs/timelog-dwaldron.org
@@ -5,6 +5,10 @@
 
 * SPRING 2014 SOFTWARE STUDIO III LOG
 ** WEEK 1 (2/11/14 - 2/17/14)
+*** Studio class time :dustin:
+Took time to make virtualbox pretty
+*** Studio class time :dustin:
+Worked with studio group and Colagn to make ERD of websurv
 *** Ditching eVIl and learning emacs :dustin:
 CLOCK: [2014-02-17 Mon 20:34]--[2014-02-17 Mon 20:43] =>  0:09
 - did it
@@ -19,27 +23,76 @@ and why branches are important. I don't miss svn.
 
 
 ** WEEK 2 (2/18/14 - 2/24/14)
+*** Studio class time :dustin:
+Reconfigured ./virtualenvs/ file and made virtualenv 
+for websurv complete with exported DJANGO_SETTINGS_MODULE
+variable.  
+*** Studio class time :dusitn:
+
 
 ** WEEK 3 (2/25/14 - 3/3/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 4 (3/4/14 - 3/10/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 5 (3/11/14 - 3/17/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 6 (3/18/14 - 3/24/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 7 (3/25/14 - 3/31/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 8 (4/1/14 - 4/7/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 9 (4/8/14 - 4/14/14) 
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 10 (4/15/14 - 4/21/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 11 (4/22/14 - 4/28/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 12 (4/29/14 - 5/5/14)
+*** Studio class time :dustin:
+
+*** Studio class time :dustin:
+
 
 ** WEEK 13 (5/6/14 - 5/12/14)
+*** Studio class time :dustin:
 
-* Dustin's Reports
+*** Studio class time :dustin:
+
+
