--- a/timelogs/timelog-jwilhelm.org
+++ b/timelogs/timelog-jwilhelm.org
@@ -3,7 +3,7 @@
 #+DATE: Spring 2014
 #+STARTUP: content indent logdrawer lognoteclock-out lognotedone
 
-* WordSurv 2.0                                                       :joshua:
+* WordSurv 2.0                                                     :jwilhelm:
 ** Learning/Research
 *** TODO Learn org mode [1/1]
 :PROPERTIES:
@@ -21,17 +21,34 @@ CLOCK: [2014-02-16 Sun 20:32]--[2014-02-16 Sun 20:40] =>  0:08
 - Did the tutorial and figured out how to make checkboxes.
 *** TODO Refresher on Git
 **** TODO Git documentation book [1/5] [[http://git-scm.com/documentation][Documentation]]
+:LOGBOOK:
+CLOCK: [2014-02-19 Wed 09:34]--[2014-02-19 Wed 09:35] =>  0:01
+- trying to get everything commited properly
+CLOCK: [2014-02-19 Wed 09:28]--[2014-02-19 Wed 09:31] =>  0:03
+:END:
 - [X] 1 Getting Started
 - [ ] 2 Git Basics
 - [ ] 3 Git Branching
 - [ ] 6 Git Tools
 - [ ] 7 Customizing Git
-***** Time
-CLOCK: [2014-02-18 Tue 13:54]
+***** Time                                                         :jwilhelm:
+CLOCK: [2014-02-18 Tue 15:05]--[2014-02-18 Tue 15:05] =>  0:00
+CLOCK: [2014-02-18 Tue 15:04]--[2014-02-18 Tue 15:05] =>  0:01
+- Class time.
+CLOCK: [2014-02-18 Tue 13:54]--[2014-02-18 Tue 14:34] =>  0:40
+- Class time.
 CLOCK: [2014-02-18 Tue 13:32]--[2014-02-18 Tue 13:52] =>  0:20
 - Finished git tutorial chapter 1.
 CLOCK: [2014-02-16 Sun 21:18]--[2014-02-16 Sun 21:31] =>  0:13
 - Made it through 1.3. Start from [[http://git-scm.com/book/en/Getting-Started-Installing-Git][1.4]] next time.
 
+  
 
+** Class Time                                                     :jwilhelm:
+*** 02/18/14
+CLOCK: [2014-02-18 Tue 15:20]--[2014-02-18 Tue 16:00] =>  0:40
+CLOCK: [2014-02-18 Tue 15:06]--[2014-02-18 Tue 15:20] =>  0:14
+- Class time.
+CLOCK: [2014-02-18 Tue 14:35]--[2014-02-18 Tue 15:04] =>  0:29
+- Class time.
 
