Trying to get set up on my laptop so I can work this weekend.

--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -1,29 +1,33 @@
 #+NAME: Justin's Time Log
 #+AUTHOR: Justin Southworth
 #+DATE: Spring 2014
-#+STARTUP: content indent logdrawer lognoteclock-out lognotedone
+#+STARTUP: content indent logdrawer lognoteclock-out lognotedone odd
+#+PROPERTY: Effort_ALL 0 0:10 0:30 1:00 2:00 3:00 4:00 5:00 6:00 7:00
+
 
 * Pre week 1 (2-18)
-** Learning how to make this org stuff work
+*** Learning how to make this org stuff work
   CLOCK: [2014-02-16 Sun 21:52]--[2014-02-17 Mon 01:12] =>  3:20
-** Didn't clock correctly because of machine crashes. Which were due to having no space on my X-drive.
-** DONE Reviewing org mode commands
+*** Didn't clock correctly because of machine crashes. Which were due to having no space on my X-drive.
+*** DONE Reviewing org mode commands
    CLOSED: [2014-02-18 Tue 15:22]
    - CLOSING NOTE [2014-02-18 Tue 15:22] \\
      Probably will still need some work, but good enough for now.
 
 * Week 1 (2-18 -- 2-25)
-CLOCK: [2014-02-18 Tue 15:52]--[2014-02-18 Tue 15:53] =>  0:01
-- Umm...
-** TODO Correcting and editing org file 		  :class:tuesday:org:
-CLOCK: [2014-02-18 Tue 15:53]
+  CLOCK: [2014-02-18 Tue 15:52]--[2014-02-18 Tue 15:53] =>  0:01
+  * DONE Correcting and editing org file                   :class:tuesday:org:
+CLOSED: [2014-02-19 Wed 12:19]
+- State "DONE"       from "TODO"       [2014-02-19 Wed 12:19]
   CLOCK: [2014-02-18 Tue 14:38]--[2014-02-18 Tue 15:52] =>  1:14
   - Class
 :PROPERTIES:
 :ORDERED: t
 :END:
-** DONE Test TODO
-CLOSED: [2014-02-18 Tue 15:50]
+*** DONE Test TODO
+CLOSED: [2014-02-19 Wed 12:01]
+- State "DONE"       from "TODO"       [2014-02-19 Wed 12:01]
+
 :PROPERTIES:
 :ORDERED: t
 :END:
@@ -35,4 +39,54 @@ CLOSED: [2014-02-18 Tue 15:50]
   In progress??
 
    - CLOSING NOTE [2014-02-18 Tue 15:48] \\
-     started work
+     started wor
+*** DONE Fix org mode based on Nurk's email                 :wednesday:org:
+CLOSED: [2014-02-19 Wed 15:11]
+- State "DONE"       from "TODO"       [2014-02-19 Wed 15:11]
+CLOCK: [2014-02-19 Wed 14:58]--[2014-02-19 Wed 15:11] =>  0:13
+
+CLOCK: [2014-02-19 Wed 12:17]--[2014-02-19 Wed 12:18] =>  0:01
+- Does a logbook exist?
+CLOCK: [2014-02-19 Wed 12:04]--[2014-02-19 Wed 12:17] =>  0:13
+- Updated emacs to get Nurk's package manager. This is a test to see if it worked.
+CLOCK: [2014-02-19 Wed 12:03]--[2014-02-19 Wed 12:04] =>  0:01
+- State "TODO"       from "IN_PROGRESS" [2014-02-19 Wed 12:01]
+
+
+* Week 1 (2/18 - 2/15)
+
+*** DONE Attempting to clean this file
+CLOSED: [2014-02-19 Wed 15:25]
+- State "DONE"       from ""           [2014-02-19 Wed 15:25]
+CLOCK: [2014-02-19 Wed 15:12]--[2014-02-19 Wed 15:22] =>  0:10
+- Can't fix the problem where the clocks and following messages are not indented well.
+  That's just gonna be a mess to read. Did find how to further indent each line so
+  that it looks a bit cleaner. Logbook still not showing up.
+
+*** TODO Back onto Logbook
+CLOCK: [2014-02-19 Wed 17:53]--
+
+CLOCK: [2014-02-19 Wed 16:24]--[2014-02-19 Wed 16:24] =>  0:00
+- Nurk couldn't figure it out either, so I'm off of that for now.
+CLOCK: [2014-02-19 Wed 15:51]--
+CLOCK: [2014-02-19 Wed 15:24]--[2014-02-19 Wed 15:51] =>  0:27
+:PROPERTIES:
+:Effort:   0:30
+:END:
+
+*** DONE Foo
+CLOSED: [2014-02-19 Wed 18:02]
+:LOGBOOK:
+- State "DONE"       from "IN_PROGRESS" [2014-02-19 Wed 18:02]
+- State "IN_PROGRESS" from "DONE"       [2014-02-19 Wed 18:01] \\
+  Stuff.
+:END:
+- State "DONE"       from "TODO"       [2014-02-19 Wed 17:28]
+CLOCK: [2014-02-19 Wed 16:23]--[2014-02-19 Wed 16:23] =>  0:00
+CLOCK: [2014-02-19 Wed 16:21]--[2014-02-19 Wed 16:23] =>  0:02
+CLOCK: [2014-02-19 Wed 15:53]--
+
+*** TODO Learning more emacs
+CLOCK: [2014-02-19 Wed 16:25]--[2014-02-19 Wed 17:28] =>  1:03
+- Progress. Found some good pages of info.
+
