--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -1,7 +1,7 @@
 #+NAME: Justin's Time Log
 #+AUTHOR: Justin Southworth
 #+DATE: Spring 2014
-#+STARTUP: content indent logdrawer lognoteclock-out lognotedone odd
+#+STARTUP: content indent logdrawer lognoteclock-out lognotedone
 #+PROPERTY: Effort_ALL 0 0:10 0:30 1:00 2:00 3:00 4:00 5:00 6:00 7:00
 
 
@@ -53,7 +53,7 @@ CLOCK: [2014-02-19 Wed 12:03]--[2014-02-19 Wed 12:04] =>  0:01
 - State "TODO"       from "IN_PROGRESS" [2014-02-19 Wed 12:01]
 
 
-* Week 1 (2/18 - 2/15)
+* Week 1 take 2 (2/18 - 2/15)
 
 *** DONE Attempting to clean this file
 CLOSED: [2014-02-19 Wed 15:25]
@@ -64,6 +64,11 @@ CLOCK: [2014-02-19 Wed 15:12]--[2014-02-19 Wed 15:22] =>  0:10
   that it looks a bit cleaner. Logbook still not showing up.
 
 *** TODO Back onto Logbook
+:LOGBOOK:
+CLOCK: [2014-02-19 Wed 22:02]--[2014-02-19 Wed 22:02] =>  0:00
+- Test.
+CLOCK: [2014-02-19 Wed 21:47]--[2014-02-19 Wed 21:48] =>  0:01
+:END:
 CLOCK: [2014-02-19 Wed 17:53]--
 
 CLOCK: [2014-02-19 Wed 16:24]--[2014-02-19 Wed 16:24] =>  0:00
@@ -86,7 +91,49 @@ CLOCK: [2014-02-19 Wed 16:23]--[2014-02-19 Wed 16:23] =>  0:00
 CLOCK: [2014-02-19 Wed 16:21]--[2014-02-19 Wed 16:23] =>  0:02
 CLOCK: [2014-02-19 Wed 15:53]--
 
+*** DONE Prepping for the weekend
+CLOCK: [2014-02-19 Wed 21:13]--[2014-02-19 Wed 21:19] =>  0:06
+- On to checking if I can get the logbook to work.
+
+
+
+*** TODO Logbook on mac
+:LOGBOOK:
+CLOCK: [2014-02-19 Wed 22:32]
+CLOCK: [2014-02-19 Wed 22:03]--[2014-02-19 Wed 22:09] =>  0:06
+- Broke
+CLOCK: [2014-02-19 Wed 21:48]--[2014-02-19 Wed 22:01] =>  0:13
+CLOCK: [2014-02-19 Wed 21:48]--[2014-02-19 Wed 21:48] =>  0:00
+- Working..
+:END:
+CLOCK: [2014-02-19 Wed 21:40]--[2014-02-19 Wed 21:47] =>  0:07
+- Maybe it worked this time???
+CLOCK: [2014-02-19 Wed 21:20]--[2014-02-19 Wed 21:40] =>  0:20
+- Switched computers.
+
 *** TODO Learning more emacs
+CLOCK: [2014-02-19 Wed 22:02]--[2014-02-19 Wed 22:03] =>  0:01
+- Test failed... It's something in my .emacs file?
 CLOCK: [2014-02-19 Wed 16:25]--[2014-02-19 Wed 17:28] =>  1:03
 - Progress. Found some good pages of info.
+
+
+
+*** TODO New Test... The other broke?
+:LOGBOOK:
+CLOCK: [2014-02-19 Wed 22:26]--[2014-02-19 Wed 22:32] =>  0:06
+- Test.
+CLOCK: [2014-02-19 Wed 22:21]--[2014-02-19 Wed 22:26] =>  0:05
+- More testing...
+:END:
+
+*** TODO Test
+:LOGBOOK:
+CLOCK: [2014-02-19 Wed 22:17]--[2014-02-19 Wed 22:21] =>  0:04
+- Broke the todo and can't seem to fix it..
+CLOCK: [2014-02-19 Wed 22:16]--[2014-02-19 Wed 22:17] =>  0:01
+- See?
+:END:
+CLOCK: [2014-02-19 Wed 22:09]--[2014-02-19 Wed 22:16] =>  0:07
+- Commenting out the (require 'org) from my .emacs solved the problem...
 
