--- a/timelogs/timelog-southworth.org
+++ b/timelogs/timelog-southworth.org
@@ -99,7 +99,8 @@ CLOCK: [2014-02-19 Wed 21:13]--[2014-02-19 Wed 21:19] =>  0:06
 
 *** TODO Logbook on mac
 :LOGBOOK:
-CLOCK: [2014-02-19 Wed 22:32]
+CLOCK: [2014-02-19 Wed 22:32]--[2014-02-19 Wed 22:42] =>  0:10
+- Test...
 CLOCK: [2014-02-19 Wed 22:03]--[2014-02-19 Wed 22:09] =>  0:06
 - Broke
 CLOCK: [2014-02-19 Wed 21:48]--[2014-02-19 Wed 22:01] =>  0:13
@@ -136,4 +137,8 @@ CLOCK: [2014-02-19 Wed 22:16]--[2014-02-19 Wed 22:17] =>  0:01
 :END:
 CLOCK: [2014-02-19 Wed 22:09]--[2014-02-19 Wed 22:16] =>  0:07
 - Commenting out the (require 'org) from my .emacs solved the problem...
+
+
+*** TODO Test 10000
+CLOCK: [2014-02-19 Wed 22:42]
 
